--- a/pom.xml
+++ b/pom.xml
@@ -5,17 +5,19 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>app</groupId>
-    <artifactId>FridayTask29Aug</artifactId>
+    <artifactId>GLS_FridayTask29Aug</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
         <lombok.version>1.18.36</lombok.version>
         <hibernate-version>6.6.6.Final</hibernate-version>
         <junit.version>5.11.4</junit.version>
         <postgres.version>42.7.5</postgres.version>
+
         <testcontainers.version>1.20.4</testcontainers.version>
         <logback-classic>1.5.16</logback-classic>
         <org.slf4j>2.0.16</org.slf4j>
